--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dev-utils": "^4.2.1",
     "react-dom": "^16.3.0",
     "react-dropzone": "^4.2.9",
+    "react-flexbox-grid": "^2.1.2",
     "react-i18next": "^7.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
@@ -32,7 +33,7 @@
     "seamless-immutable": "^7.1.3",
     "style-loader": "0.19.0",
     "styled-components": "^2.4.0",
-    "styled-tools": "^0.5.0",
+    "styled-tools": "^0.5.4",
     "yup": "^0.24.1"
   },
   "devDependencies": {
@@ -64,7 +65,7 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
+    "webpack-dev-server": "^2.9.7",
     "webpack-manifest-plugin": "1.3.2"
   },
   "scripts": {
