--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-i18next": "^7.3.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-share": "^2.4.0",
     "react-test-renderer": "^16.3.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
